recl-music-server

--- a/recl-collect/src/main/resources/application.properties
+++ b/recl-collect/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 spring.profiles.active=dev
 
 # 项目运行端口
-server.port=8004
+server.port=8005
 
 # 服务名
-spring.application.name=recl-singer
+spring.application.name=recl-collect
 
 # mysql数据库连接
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -20,7 +20,7 @@ spring.jackson.time-zone=GMT+8
 # mybatisPlus配置
 mybatis-plus.global-config.db-config.logic-delete-value=1
 mybatis-plus.global-config.db-config.logic-not-delete-value=0
-mybatis-plus.mapper-locations=classpath:com/ren/singer/mapper/xml/*.xml
+mybatis-plus.mapper-locations=classpath:com/ren/collect/mapper/xml/*.xml
 # redis配置
 
 
@@ -31,7 +31,7 @@ spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.refresh-enabled=true
 
 # dubbo配置
-dubbo.application.name=recl-singer
+dubbo.application.name=recl-collect
 dubbo.registry.address=nacos://127.0.0.1:8848
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=-1
