--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
         <module>recl-common/recl-utils</module>
         <module>recl-comment</module>
         <module>recl-song-list</module>
+        <module>recl-singer</module>
+        <module>recl-collect</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
