--- a/recl-singer/src/main/resources/application.properties
+++ b/recl-singer/src/main/resources/application.properties
@@ -25,10 +25,10 @@ mybatis-plus.mapper-locations=classpath:com/ren/singer/mapper/xml/*.xml
 
 
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
-# nacos注册中心配置
-spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-# nacos配置自动刷新
-spring.cloud.nacos.config.refresh-enabled=true
+## nacos注册中心配置
+#spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+## nacos配置自动刷新
+#spring.cloud.nacos.config.refresh-enabled=true
 
 # dubbo配置
 dubbo.application.name=recl-singer
