recl-music-server

--- a/recl-comment/src/main/resources/application.properties
+++ b/recl-comment/src/main/resources/application.properties
@@ -36,3 +36,4 @@ dubbo.registry.address=nacos://127.0.0.1:8848
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=-1
 dubbo.provider.timeout=6000
+dubbo.cloud.subscribed-services=recl-comment
