--- a/recl-ucenter/src/main/resources/application.properties
+++ b/recl-ucenter/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.profiles.active=dev
 
 # 项目运行端口
-server.port=8003
+server.port=8008
 
 # 服务名
 spring.application.name=recl-ucenter
@@ -36,4 +36,4 @@ dubbo.registry.address=nacos://127.0.0.1:8848
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=-1
 dubbo.provider.timeout=6000
-dubbo.cloud.subscribed-services=*
+dubbo.cloud.subscribed-services=recl-oss
