recl-music-server

--- a/recl-oss/pom.xml
+++ b/recl-oss/pom.xml
@@ -35,15 +35,22 @@
             <artifactId>joda-time</artifactId>
         </dependency>
 
-        <!-- Swagger-ui -->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
+            <groupId>com.ren</groupId>
+            <artifactId>recl-base</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
+            <groupId>com.ren</groupId>
+            <artifactId>recl-interface</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ren</groupId>
+            <artifactId>recl-utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
