--- a/recl-oss/src/main/resources/application.properties
+++ b/recl-oss/src/main/resources/application.properties
@@ -14,5 +14,19 @@ aliyun.oss.file.keysecret=2WE7MSYYkBmrsLT4wrEI1qN7kie2Qx
 aliyun.oss.file.bucketname=recl-edu
 
 #文件上传大小设置
-spring.servlet.multipart.max-file-size=30MB
-spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+## nacos注册中心配置
+#spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+## nacos配置自动刷新
+#spring.cloud.nacos.config.refresh-enabled=true
+
+# dubbo配置
+dubbo.application.name=recl-oss
+dubbo.registry.address=nacos://127.0.0.1:8848
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=-1
+dubbo.provider.timeout=6000
+dubbo.cloud.subscribed-services=recl-ucenter
