--- a/recl-ucenter/pom.xml
+++ b/recl-ucenter/pom.xml
@@ -30,6 +30,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.ren</groupId>
+            <artifactId>recl-interface</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 </project>
